APPSEC-2181 docker best practices added non-privileged appuser

--- a/confluent-sigma/sigma-streams-ui/Dockerfile
+++ b/confluent-sigma/sigma-streams-ui/Dockerfile
@@ -3,7 +3,9 @@
 
 FROM openjdk:11
 RUN apt-get update && apt-get upgrade -y \
+ && useradd --create-home --shell /bin/bash appuser \
  && rm -rf /var/lib/apt/lists/*
 COPY ./target/sigma-streams-ui-1.2.1.jar /tmp
+USER appuser
 WORKDIR /tmp
 CMD java -jar sigma-streams-ui-1.2.1.jar
